--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "the practices of the web seminar",
   "main": "./week1/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/vibertthio/web-seminar/issues"
   },
-  "homepage": "https://github.com/vibertthio/web-seminar#readme"
+  "homepage": "https://github.com/vibertthio/web-seminar#readme",
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0"
+  }
 }
