--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-react": "^6.10.0"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "connect-multiparty": "^2.0.0",
     "express": "^4.15.2"
   }
 }
