Add the todo-app project, based on React

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,8 @@
             "MethodDefinition": true,
             "ClassDeclaration": true
         }
-    }]
+    }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+
   }
 }
